Add hero section
- Create hero component and styles

- Add hero component to Home page

--- a/src/components/header.module.css
+++ b/src/components/header.module.css
@@ -8,7 +8,7 @@
 }
 
 .logo {
-  color: var(--color-white);
+  color: var(--color-primary);
   font-size: 2rem;
 }
 
@@ -25,10 +25,10 @@
 }
 
 .navLink {
-  color: var(--color-white);
+  color: var(--color-primary);
   font-size: 2rem;
 }
 
 .navLink:hover {
-  color: var(--color-seondary);
+  color: var(--color-tertiary);
 }
