--- a/src/components/hero.module.css
+++ b/src/components/hero.module.css
@@ -16,7 +16,8 @@
 }
 
 .heroPrimaryText {
-  color: var(--color-tertiary);
+  color: var(--color-secondary);
+  font-family: Poppins, sans-serif;
   font-size: 8rem;
 }
 
