--- a/src/components/header.module.css
+++ b/src/components/header.module.css
@@ -1,9 +1,13 @@
 .header {
   align-items: center;
+  background-color: var(--color-white);
   display: flex;
   height: 8rem;
   justify-content: space-between;
   padding: 0 3.2rem;
+  position: fixed;
+  width: 100%;
+  z-index: 999;
 }
 
 .logo {
