--- a/src/components/project.module.css
+++ b/src/components/project.module.css
@@ -1,6 +1,7 @@
 .content {
-  display: flex;
+  display: grid;
   gap: 4rem;
+  grid-template-columns: repeat(2, 1fr);
 }
 
 .reversed {
@@ -60,5 +61,5 @@
 
 .image {
   border: 4px solid var(--color-primary);
-  flex: 0 0 50%;
+  height: 28rem;
 }
