--- a/src/components/about.module.css
+++ b/src/components/about.module.css
@@ -1,38 +1,40 @@
 .section {
-  padding: 8rem 0;
+  padding-bottom: var(--size-6);
+  padding-top: var(--size-6);
 }
 
 .container {
   margin: 0 auto;
-  max-width: 98rem;
+  max-width: var(--max-width);
 }
 
 .primaryHeading {
-  border-bottom: 0.4rem solid var(--color-secondary);
+  border-bottom: var(--border);
   color: var(--color-secondary);
-  font-size: 3.2rem;
-  margin-bottom: 4rem;
+  font-size: var(--size-3);
+  margin-bottom: var(--size-5);
 }
 
 .content {
   display: grid;
-  grid-gap: 4rem;
+  gap: var(--size-4);
   grid-template-columns: repeat(2, 1fr);
 }
 
 .text {
-  margin-bottom: 2rem;
+  margin-bottom: var(--size-2);
 }
 
 .paragraph {
+  color: var(--color-primary);
   font-family: var(--font-secondary);
-  margin-bottom: 1rem;
+  margin-bottom: var(--size-1);
 }
 
 .secondaryHeading {
   color: var(--color-secondary);
-  font-size: 2rem;
-  margin-bottom: 1rem;
+  font-size: var(--font-size-2);
+  margin-bottom: var(--size-1);
 }
 
 .list {
@@ -41,14 +43,14 @@
 }
 
 .item {
-  margin-right: 1rem;
+  margin-right: var(--size-1);
 }
 
 .icon {
   color: var(--color-secondary);
-  margin-right: 0.25rem;
+  margin-right: var(--size-0);
 }
 
 .image {
-  border: 4px solid var(--color-primary);
+  border: var(--border);
 }
