--- a/src/components/blog.module.css
+++ b/src/components/blog.module.css
@@ -1,21 +1,22 @@
 .section {
-  padding: 8rem 0;
+  padding-bottom: var(--size-6);
+  padding-top: var(--size-6);
 }
 
 .container {
   margin: 0 auto;
-  max-width: 98rem;
+  max-width: var(--max-width);
 }
 
 .primaryHeading {
-  border-bottom: 0.4rem solid var(--color-secondary);
+  border-bottom: var(--border);
   color: var(--color-secondary);
-  font-size: 3.2rem;
-  margin-bottom: 4rem;
+  font-size: var(--size-3);
+  margin-bottom: var(--size-5);
 }
 
 .content {
   display: grid;
-  grid-gap: 4rem;
+  gap: var(--size-4);
   grid-template-columns: repeat(2, 1fr);
 }
