--- a/src/components/hero.module.css
+++ b/src/components/hero.module.css
@@ -1,7 +1,7 @@
 .hero {
   align-items: center;
   display: flex;
-  height: calc(100vh - 8rem);
+  height: 100vh;
   justify-content: center;
 }
 
@@ -12,16 +12,17 @@
 
 .heroPreText {
   color: var(--color-primary);
-  font-size: 2rem;
+  font-family: var(--font-primary);
+  font-size: var(--font-size-2);
 }
 
 .heroPrimaryText {
   color: var(--color-secondary);
-  font-family: Poppins, sans-serif;
-  font-size: 8rem;
+  font-family: var(--font-secondary);
+  font-size: var(--font-size-6);
 }
 
 .heroSecondaryText {
   color: var(--color-primary);
-  font-size: 4.8rem;
+  font-size: var(--font-size-4);
 }
