--- a/src/components/post-preview.module.css
+++ b/src/components/post-preview.module.css
@@ -1,17 +1,18 @@
 .heading {
   color: var(--color-secondary);
-  font-size: 2rem;
-  margin-bottom: 1rem;
+  font-size: var(--font-size-2);
+  margin-bottom: var(--size-1);
 }
 
 .paragraph {
   color: var(--color-primary);
   font-family: var(--font-secondary);
-  margin-bottom: 1rem;
+  margin-bottom: var(--size-1);
 }
 
 .link {
   color: var(--color-secondary);
+  font-size: var(--font-size-1);
 }
 
 .link:hover {
