--- a/src/components/project.module.css
+++ b/src/components/project.module.css
@@ -1,11 +1,7 @@
 .content {
   display: grid;
-  gap: 4rem;
+  gap: var(--size-4);
   grid-template-columns: repeat(2, 1fr);
-}
-
-.reversed {
-  flex-direction: row-reverse;
 }
 
 .header {
@@ -17,13 +13,13 @@
 
 .heading {
   color: var(--color-secondary);
-  font-size: 2.4rem;
+  font-size: var(--font-size-2);
 }
 
 .link {
   color: var(--color-primary);
-  font-size: 2.4rem;
-  margin-right: 1rem;
+  font-size: var(--font-size-2);
+  margin-right: var(--size-1);
 }
 
 .link:last-child {
@@ -35,14 +31,15 @@
 }
 
 .paragraph {
+  color: var(--color-primary);
   font-family: var(--font-secondary);
-  margin-bottom: 1rem;
+  margin-bottom: var(--size-1);
 }
 
 .secondaryHeading {
   color: var(--color-secondary);
-  font-size: 2rem;
-  margin-bottom: 1rem;
+  font-size: var(--font-size-2);
+  margin-bottom: var(--size-1);
 }
 
 .list {
@@ -51,15 +48,15 @@
 }
 
 .item {
-  margin-right: 1rem;
+  margin-right: var(--size-1);
 }
 
 .icon {
   color: var(--color-secondary);
-  margin-right: 0.25rem;
+  margin-right: var(--size-0);
 }
 
 .image {
-  border: 4px solid var(--color-primary);
+  border: var(--border);
   height: 28rem;
 }
