--- a/src/components/about.module.css
+++ b/src/components/about.module.css
@@ -1,28 +1,7 @@
-.section {
-  padding-bottom: var(--size-6);
-  padding-top: var(--size-6);
-}
-
-.container {
-  margin: 0 auto;
-  max-width: var(--max-width);
-}
-
-.primaryHeading {
-  border-bottom: var(--border);
-  color: var(--color-secondary);
-  font-size: var(--size-3);
-  margin-bottom: var(--size-5);
-}
-
 .content {
   display: grid;
   gap: var(--size-4);
   grid-template-columns: repeat(2, 1fr);
-}
-
-.text {
-  margin-bottom: var(--size-2);
 }
 
 .paragraph {
@@ -31,7 +10,7 @@
   margin-bottom: var(--size-1);
 }
 
-.secondaryHeading {
+.heading {
   color: var(--color-secondary);
   font-size: var(--font-size-2);
   margin-bottom: var(--size-1);
