--- a/src/components/section.module.css
+++ b/src/components/section.module.css
@@ -1,6 +1,6 @@
 .section {
-  padding-bottom: var(--size-6);
-  padding-top: var(--size-6);
+  margin-bottom: var(--size-8);
+  margin-top: var(--size-8);
 }
 
 .container {
