--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -14,6 +14,8 @@
   --size-4: 4.523rem;
   --size-5: 6.396rem;
   --size-6: 9.044rem;
+  --size-7: 12.788rem;
+  --size-8: 18.083rem;
 
   /* Layout */
   --max-width: 98rem;
