--- a/src/components/project.module.css
+++ b/src/components/project.module.css
@@ -2,6 +2,13 @@
   display: grid;
   gap: var(--size-4);
   grid-template-columns: repeat(2, 1fr);
+  justify-items: center;
+}
+
+@media only screen and (max-width: 56.25em) {
+  .content {
+    grid-template-columns: repeat(1, 1fr);
+  }
 }
 
 .header {
@@ -59,4 +66,19 @@
 .image {
   border: var(--border);
   height: 32rem;
+  width: 32rem;
+}
+
+@media only screen and (max-width: 56.25em) {
+  .image {
+    grid-row: 1;
+  }
+}
+
+@media only screen and (max-width: 37.5em) {
+  .image {
+    grid-row: 1;
+    height: 24rem;
+    width: 24rem;
+  }
 }
