--- a/src/components/section.module.css
+++ b/src/components/section.module.css
@@ -1,5 +1,7 @@
 .section {
   margin-bottom: var(--size-8);
+  margin-left: var(--size-3);
+  margin-right: var(--size-3);
   margin-top: var(--size-8);
 }
 
@@ -13,4 +15,15 @@
   color: var(--color-secondary);
   font-size: var(--size-3);
   margin-bottom: var(--size-5);
+}
+
+@media only screen and (max-width: 56.25em) {
+  .section {
+    margin-bottom: var(--size-6);
+    margin-top: var(--size-6);
+  }
+
+  .heading {
+    margin-bottom: var(--size-3);
+  }
 }
