Update colors for better accessibility

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -23,9 +23,9 @@
   --footer-height: 8rem;
 
   /* Colors */
-  --color-white: #fff;
-  --color-primary: #222d44;
-  --color-secondary: #70c1b3;
+  --color-white: #fcfcfc;
+  --color-primary: #37496d;
+  --color-secondary: #317266;
 
   /* Fonts */
   --font-primary: 'Roboto Slab', sans-serif;
