Update CSS selectors in Posts and Projects

--- a/src/components/project.module.css
+++ b/src/components/project.module.css
@@ -11,6 +11,12 @@
   }
 }
 
+.project p {
+  color: var(--color-primary);
+  font-family: var(--font-secondary);
+  margin-bottom: var(--size-1);
+}
+
 .header {
   align-items: center;
   display: flex;
