--- a/src/templates/post.module.css
+++ b/src/templates/post.module.css
@@ -23,14 +23,14 @@
   margin: var(--size-2) auto;
 }
 
-h2 {
+.content h2 {
   color: var(--color-secondary);
   font-size: var(--size-2);
   margin-bottom: var(--size-1);
   margin-top: var(--size-3);
 }
 
-p {
+.content p {
   color: var(--color-primary);
   font-family: var(--font-secondary);
   margin-bottom: var(--size-1);
