--- a/src/components/contact.module.css
+++ b/src/components/contact.module.css
@@ -34,8 +34,10 @@
   font-size: var(--font-size-1);
 }
 
-.link:hover {
-  color: var(--color-primary);
+@media (hover: hover) and (pointer: fine) {
+  .link:hover {
+    color: var(--color-primary);
+  }
 }
 
 .icon {
