--- a/src/components/footer.module.css
+++ b/src/components/footer.module.css
@@ -21,8 +21,10 @@
   font-size: var(--font-size-1);
 }
 
-.link:hover {
-  color: var(--color-secondary);
+@media (hover: hover) and (pointer: fine) {
+  .link:hover {
+    color: var(--color-secondary);
+  }
 }
 
 .icon {
