--- a/src/components/project.module.css
+++ b/src/components/project.module.css
@@ -39,8 +39,10 @@
   margin-right: 0;
 }
 
-.link:hover {
-  color: var(--color-secondary);
+@media (hover: hover) and (pointer: fine) {
+  .link:hover {
+    color: var(--color-secondary);
+  }
 }
 
 .paragraph {
