Allow header navigation to show on mobile screens

--- a/src/components/header.module.css
+++ b/src/components/header.module.css
@@ -12,16 +12,16 @@
   z-index: 999;
 }
 
-@media only screen and (max-width: 37.5em) {
-  .header {
-    display: none;
-  }
-}
-
 .logo {
   color: var(--color-secondary);
   font-family: var(--font-secondary);
   font-size: var(--font-size-2);
+}
+
+@media only screen and (max-width: 37.5em) {
+  .logo {
+    display: none;
+  }
 }
 
 @media (hover: hover) and (pointer: fine) {
