--- a/src/components/section.module.css
+++ b/src/components/section.module.css
@@ -15,6 +15,12 @@
   color: var(--color-secondary);
   font-size: var(--size-3);
   margin-bottom: var(--size-5);
+  position: relative;
+}
+
+.heading span {
+  position: absolute;
+  top: calc(-1 * var(--header-height));
 }
 
 @media only screen and (max-width: 56.25em) {
